--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-#Mongo Database Connection String
-MONGOLAB_URI=mongodb://localhost/PetSitters
-
-AUTH_SECRET=Secret
+MONGOLAB=mongodb://petpalsuser:Petpals@ds051595.mongolab.com:51595/pet-pals
+AUTH_SECRET=TheSecret
+PORT=3000
